<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            app:srcCompat="@drawable/ic_date_range_black_24dp" />

        <TextView
            android:id="@+id/textView_consulta_realizada_data_paciente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/consulta_realizada_data" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:paddingLeft="10dp"
            app:srcCompat="@drawable/ic_access_time_black_24dp" />

        <TextView
            android:id="@+id/textView_consulta_realizada_hora_paciente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/consultas_realizada_hora" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:paddingLeft="10dp"
            app:srcCompat="@drawable/ic_date_range_black_24dp" />

        <TextView
            android:id="@+id/textView_consultas_realizada_dia_semana_paciente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/consulta_realizada_dia_semana" />

    </LinearLayout>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/diagnostico_medico"
        android:textColor="#000000"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/textViewQueixaFicha_paciente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/queixa_paciente" />



</LinearLayout>