<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view_consultas"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/image_view_foto_paciente_medico"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/consulta_nome_paciente_medico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:text="@string/nome_paciente"
                android:textColor="#222222"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/consulta_telefone_paciente_medico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telefone_paciente"
                android:layout_alignParentStart="true"
                android:textColor="#222222"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/consulta_dia_semana_medico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:textColor="#222222"
                android:text="@string/consulta_realizada_dia_semana"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/consulta_hora_medico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/consultas_realizada_hora"
                android:textColor="#222222"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/consulta_data_medico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/consulta_realizada_data"
                android:textColor="#222222"
                android:textSize="16sp" />

        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>