<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/ic_date_range_black_24dp" />

        <TextView
            android:id="@+id/textView_consulta_realizada_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/consulta_realizada_data"
            android:textColor="#000000" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/relogio" />

        <TextView
            android:id="@+id/textView_consulta_realizada_hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/consultas_realizada_hora"
            android:textColor="#000000" />

        <ImageView
            android:id="@+id/imageView24"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/ic_date_range_black_24dp" />

        <TextView
            android:id="@+id/textView_consultas_realizada_dia_semana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/consulta_realizada_dia_semana"
            android:textColor="#000000" />

    </LinearLayout>


    <TextView
        android:id="@+id/textViewQueixaFicha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/queixa_paciente"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textViewDiagMedico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="TextView"
        android:textColor="#000000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewRecomendacaoConsulta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/recomendacao_consulta"
        android:textColor="#000000" />
</LinearLayout>