<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.FichaPacienteFragment">


    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">


        <ImageView
            android:id="@+id/imageView_ficha_paciente_picture"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            tools:srcCompat="@tools:sample/avatars[0]" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_ficha_paciente_nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/nome_paciente"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView_ficha_paciente_profissao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/profissao_paciente" />

            <TextView
                android:id="@+id/textView_ficha_paciente_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="2dp"
                android:text="@string/telefone_paciente" />

            <TextView
                android:id="@+id/textView_ficha_paciente_sexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="2dp"
                android:text="@string/sexo_paciente" />

            <TextView
                android:id="@+id/textView_ficha_paciente_nascimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="2dp"
                android:text="@string/data_nascimento_paciente" />

            <TextView
                android:id="@+id/textView_ficha_paciente_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="2dp"
                android:text="@string/email_paciente" />



        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:gravity="center"
        android:text="Historico de Consultas:"
        android:textColor="#000000"
        android:textSize="17sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_ficha_paciente_consultas_realizadas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0">

    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>