<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:whilu="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".fragment.PacienteVerificationDataFragment">

    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_margin="5dp"-->
    <!--        android:gravity="center"-->
    <!--        android:orientation="vertical">-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/nos_ajude_a_te_ajudar"
        android:textColor="#000000"
        android:textSize="22sp" />

    <!--    </LinearLayout>-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutQueixaPaciente"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:theme="@style/TextInputLayoutStyle"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutQueixaPaciente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editQueixaPaciente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/oque_esta_sentindo"
            android:inputType="text"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="Você já foi em um médico?"
        android:textOff="Não"
        android:textOn="Sim"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDiagnosticoMedico"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:theme="@style/TextInputLayoutStyle"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutDiagnosticoMedico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editDiagnosticoMedico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Qual foi o diagnóstico?"
            android:inputType="text"
            android:text="Não possuo"
            android:visibility="visible" />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/linearLayoutSessoes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Quantas sessões ele te indicou?"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/mostraNumeroSessoes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/numero_de_sessoes"
                android:textSize="14sp" />

            <NumberPicker
                android:id="@+id/numberPicker"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_gravity="center" />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_salvar_consulta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/botao_salva_ficha"
            android:text="@string/salvar"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

    </LinearLayout>


</LinearLayout>